make title text upercase, add subtitle, remove dead link

--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Change the World or Die Trying</title>
-	<link rel="stylesheet" href="static/css/main.css">
-	<script src="static/js/main.js"></script>
-</head>
-<body>
-	<div id="root">
-		<div class="center">
-			<h1 id="cwdt">change the world or die trying.</h1>
-			<p id="work-link">
-				To view our latest work, 
-				<a id="latest-work-link" href="gpt2-bias">click here</a>.
-			<p>
+	<head>
+		<title>CHANGE THE WORLD OR DIE TRYING&#8482;</title>
+		<link rel="stylesheet" href="static/css/main.css">
+		<script src="static/js/main.js"></script>
+	</head>
+	<body>
+		<div id="root">
+			<div class="center">
+				<h1 id="cwdt">CHANGE THE WORLD OR DIE TRYING&#8482;</h1>
+				<p id="subtitle">IYKYK<p>
+			</div>
 		</div>
-	</div>
-</body>
+	</body>
 </html>
