Rework for Notion site

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 	<head>
 		<title>CHANGE THE WORLD OR DIE TRYING&#8482;</title>
-		<link rel="stylesheet" href="static/css/main.css">
-		<script src="static/js/main.js"></script>
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<div id="root">
 			<div class="center">
-				<h1 id="cwdt">CHANGE THE WORLD OR DIE TRYING&#8482;</h1>
+				<h1>CHANGE THE WORLD OR DIE TRYING&#8482;</h1>
+				<a href="https://notion.cwdt.us">ENTER</a>
 			</div>
 		</div>
+		<script src="js/main.js"></script>
 	</body>
 </html>
