--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div id="root">
 			<div class="center">
 				<h1>CHANGE THE WORLD OR DIE TRYING&#8482;</h1>
-				<a href="https://docs.cwdt.us">ENTER</a>
+				<a href="https://research.erdos.one/docs">ENTER</a>
 			</div>
 		</div>
 		<script src="js/main.js"></script>
